Removes forcing font-awesome (v3 & v4) width to 'auto' which overrides the 'fixed width' icon class...now allows newui menus to align correctly

--- a/framework/core/assets/less/forms-bootstrap3.less
+++ b/framework/core/assets/less/forms-bootstrap3.less
@@ -126,12 +126,12 @@ input.radio, input.checkbox {
 //	width : 214px;
 //}
 
-li [class^="fa-"],
-li [class*=" fa-"],
-li .fa-lg[class^="fa-"],
-li .fa-lg[class*=" fa-"] {
-	width: auto;
-}
+//li [class^="fa-"],
+//li [class*=" fa-"],
+//li .fa-lg[class^="fa-"],
+//li .fa-lg[class*=" fa-"] {
+//	width: auto;
+//}
 
 input:focus:invalid,
 textarea:focus:invalid,
